# PROJET-SE

./: CMakeLists.txt  algorithmbase.cpp  algorithmbase.h  algorithmrecommender.cpp  algorithmrecommender.h  circularqueuewidget.cpp  circularqueuewidget.h  edf.cpp  edf.h  fcfs.cpp  fcfs.h  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  process.cpp  process.h  round_robin.cpp  round_robin.h  round_robin_multiniveaux.cpp  round_robin_multiniveaux.h  sjf.cpp  sjf.h  statistics.h
